<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/container">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <TextView
            android:id="@+id/txt_reg_konfirmasi_judul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:text="Daftar Akun"
            android:textColor="@color/theme"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_reg_konfirmasi_uname"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_marginTop="40dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_reg_konfirmasi_judul">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_reg_konfirmasi_uname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:textColor="@color/theme"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_reg_konfirmasi_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:layout_constraintEnd_toEndOf="@+id/til_reg_konfirmasi_uname"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="@+id/til_reg_konfirmasi_uname"
            app:layout_constraintTop_toBottomOf="@+id/til_reg_konfirmasi_uname">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_reg_konfirmasi_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textPersonName"
                android:textColor="@color/theme"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_reg_konfirmasi_pass"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:layout_constraintEnd_toEndOf="@+id/til_reg_konfirmasi_email"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="@+id/til_reg_konfirmasi_email"
            app:layout_constraintTop_toBottomOf="@+id/til_reg_konfirmasi_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_reg_konfirmasi_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/theme"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/txt_reg_konfirmasi_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Konfirmasi Data"
            android:textColor="@color/theme"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="@+id/til_reg_konfirmasi_pass"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="@+id/til_reg_konfirmasi_pass"
            app:layout_constraintTop_toBottomOf="@+id/til_reg_konfirmasi_pass"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_reg_konfirmasi_nik"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:layout_constraintEnd_toEndOf="@+id/txt_reg_konfirmasi_data"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="@+id/txt_reg_konfirmasi_data"
            app:layout_constraintTop_toBottomOf="@+id/txt_reg_konfirmasi_data">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_reg_konfirmasi_nik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nik_detail_admin"
                android:inputType="textPersonName"
                android:textColor="@color/theme"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_reg_konfirmasi_nama"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:layout_constraintEnd_toEndOf="@+id/til_reg_konfirmasi_nik"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="@+id/til_reg_konfirmasi_nik"
            app:layout_constraintTop_toBottomOf="@+id/til_reg_konfirmasi_nik">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_reg_konfirmasi_nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nama_detail_admin"
                android:inputType="textPersonName"
                android:textColor="@color/theme"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_reg_konfirmasi_ttl"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:layout_constraintEnd_toEndOf="@+id/til_reg_konfirmasi_nama"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="@+id/til_reg_konfirmasi_nama"
            app:layout_constraintTop_toBottomOf="@+id/til_reg_konfirmasi_nama">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_reg_konfirmasi_ttl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ttl_detail_admin"
                android:inputType="textPersonName"
                android:textColor="@color/theme"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_reg_konfirmasi_jk"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:layout_constraintEnd_toEndOf="@+id/til_reg_konfirmasi_ttl"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="@+id/til_reg_konfirmasi_ttl"
            app:layout_constraintTop_toBottomOf="@+id/til_reg_konfirmasi_ttl">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_reg_konfirmasi_jk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/jk_detail_admin"
                android:inputType="textPersonName"
                android:textColor="@color/theme"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_reg_konfirmasi_agama"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:layout_constraintEnd_toEndOf="@+id/til_reg_konfirmasi_jk"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="@+id/til_reg_konfirmasi_jk"
            app:layout_constraintTop_toBottomOf="@+id/til_reg_konfirmasi_jk">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_reg_konfirmasi_agama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/agama_detail_admin"
                android:inputType="textPersonName"
                android:textColor="@color/theme"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_reg_konfirmasi_pekerjaan"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:layout_constraintEnd_toEndOf="@+id/til_reg_konfirmasi_agama"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="@+id/til_reg_konfirmasi_agama"
            app:layout_constraintTop_toBottomOf="@+id/til_reg_konfirmasi_agama">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_reg_konfirmasi_pekerjaan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pekerjaan_detail_admin"
                android:inputType="textPersonName"
                android:textColor="@color/theme"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_reg_konfirmasi_warga"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:layout_constraintEnd_toEndOf="@+id/til_reg_konfirmasi_pekerjaan"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="@+id/til_reg_konfirmasi_pekerjaan"
            app:layout_constraintTop_toBottomOf="@+id/til_reg_konfirmasi_pekerjaan">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_reg_konfirmasi_warga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/warga_detail_admin"
                android:inputType="textPersonName"
                android:textColor="@color/theme"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_reg_konfirmasi_daftar"
            android:layout_width="150dp"
            android:layout_height="44dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button"
            android:text="@string/daftar"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/til_reg_konfirmasi_warga"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="@+id/til_reg_konfirmasi_warga"
            app:layout_constraintTop_toBottomOf="@+id/til_reg_konfirmasi_warga"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>